--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
                 >
                   National Public School Indiranagar
                 </p>
+                <a
+                  href="brochure/mathrix-brochure.pdf"
+                  class="boxed-btn3 wow fadeInLeft"
+                  data-wow-duration="1s"
+                  data-wow-delay=".7s"
+                  >Brochure</a
+                >
               </div>
             </div>
           </div>
@@ -758,9 +765,10 @@
                     data-wow-duration="1s"
                     data-wow-delay=".5s"
                   >
-                    Phone Numbers:<br>
-                      Front Office: <a href="tel:+918025280611"> +91 080 2528 0611</a><br>
-                      Harikeshav R:
+                    Phone Numbers:<br />
+                    Front Office:
+                    <a href="tel:+918025280611"> +91 080 2528 0611</a><br />
+                    Harikeshav R:
                     <a href="tel:+916360403304">+91 6360 403 304</a>
                   </p>
                   <!-- <a -->
