Start creating 10th events

--- a/breaking-barriers.html
+++ b/breaking-barriers.html
@@ -28,7 +28,7 @@
   <body>
     <!-- slider_area_start -->
     <div class="slider_area">
-      <div class="single_slider d-flex align-items-center agon_bg overlay">
+      <div class="single_slider d-flex align-items-center breaking_barriers_bg overlay">
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-xl-12">
@@ -38,14 +38,14 @@
                   data-wow-duration="1s"
                   data-wow-delay=".4s"
                 >
-                  Agon
+                  Breaking Barriers
                 </h3>
                 <p
                   class="wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".5s"
                 >
-                  Math and Games - Grades 11 and 12
+                  Innovative Teaching Ideas - Grades 9 and 10
                 </p>
                 <a
                   href="#register"
@@ -74,8 +74,7 @@
                 data-wow-duration="1s"
                 data-wow-delay=".3s"
               >
-                It's zero hour and you’re running against the clock, but will
-                your mathematical genius meet your physical prowess?
+                Let’s build foundations, not barriers.
               </h4>
               <br />
               <iframe
