--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 data-wow-duration="1s"
                 data-wow-delay=".3s"
               >
-                Grade 11 and 12
+                Grades 11 and 12
               </h4>
             </div>
           </div>
@@ -380,6 +380,47 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-12">
+            <div class="section_title mb-80">
+              <h3
+                class="wow fadeInRight"
+                align="center"
+                data-wow-duration="1s"
+                data-wow-delay=".3s"
+              >
+                Events
+              </h3>
+              <h4
+                align="center"
+                class="wow fadeInRight"
+                data-wow-duration="1s"
+                data-wow-delay=".3s"
+              >
+                Grades 9 and 10
+              </h4>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="breaking-barriers.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/breaking-barriers.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Breaking Barriers</h4>
+                    <h5 align="center">Innovative Teaching Ideas</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -416,7 +457,7 @@
     </div>
     <!-- map_area_end  -->
 
-   <!-- footer_start  -->
+    <!-- footer_start  -->
     <footer class="footer">
       <div class="footer_top">
         <div class="container">
