Create 10th event pages

--- a/cognitoria.html
+++ b/cognitoria.html
@@ -29,7 +29,7 @@
     <!-- slider_area_start -->
     <div class="slider_area">
       <div
-        class="single_slider d-flex align-items-center breaking_barriers_bg overlay"
+        class="single_slider d-flex align-items-center cognitoria_bg overlay"
       >
         <div class="container">
           <div class="row align-items-center justify-content-center">
@@ -40,14 +40,14 @@
                   data-wow-duration="1s"
                   data-wow-delay=".4s"
                 >
-                  Breaking Barriers
+                  Cognitoria
                 </h3>
                 <p
                   class="wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".5s"
                 >
-                  Innovative Teaching Ideas - Grades 9 and 10
+                  Logical Thinking and Aptitude
                 </p>
                 <a
                   href="#register"
@@ -70,14 +70,6 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section_title mb-80">
-              <h4
-                align="center"
-                class="wow fadeInRight"
-                data-wow-duration="1s"
-                data-wow-delay=".3s"
-              >
-                Let’s build foundations, not barriers.
-              </h4>
               <br />
               <iframe
                 width="100%"
@@ -96,9 +88,9 @@
     </div>
     <div class="map_area" id="register">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeU0yTn9TMMEWRIbS3Y0OcWPCqK7_p4-usJ42u0cTIT2bPkmg/viewform?embedded=true"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSchVYndLM12JaS9ktLmrRkxaRIs1PqZMXiyhAvWBEW29bGRLA/viewform?embedded=true"
         width="100%"
-        height="1769"
+        height="1364"
         frameborder="0"
         marginheight="0"
         marginwidth="0"
