--- a/index.html
+++ b/index.html
@@ -421,6 +421,195 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="cognitoria.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/cognitoria.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Cognitoria</h4>
+                    <h5 align="center">Logical Thinking and Aptitude</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="forum-infinitum.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/forum-infinitum.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Forum Infinitum</h4>
+                    <h5 align="center">Solving Paradoxes</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="hacksquads.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/hacksquads.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Hacksquads</h4>
+                    <h5 align="center">Logical Reasoning with Coding Skills</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="mathletics.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/mathletics.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Mathletics</h4>
+                    <h5 align="center">Math and Athletics</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="mathopoly.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/mathopoly.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Mathopoly</h4>
+                    <h5 align="center">Math and Auction</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="mystifiezzera.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/mystifiezzera.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Mystifiezzera</h4>
+                    <h5 align="center">Math and Puzzles</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="operation-breakout.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/operation-breakout.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Operation Breakout</h4>
+                    <h5 align="center">Math and Crime Solving</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="picstraction.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/picstraction.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Picstraction</h4>
+                    <h5 align="center">Math and Photography</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row">
+              <div>
+                <div
+                  class="single_performer wow fadeInUp"
+                  data-wow-duration="1s"
+                  data-wow-delay=".3s"
+                >
+                  <a href="rhythmatics.html">
+                    <div data-tilt class="thumb">
+                      <img src="img/performer/rhythmatics.png" alt="" />
+                    </div>
+                  </a>
+                  <div class="performer_heading">
+                    <h4 align="center">Rhythmatics</h4>
+                    <h5 align="center">Math and Music</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
