--- a/mathopoly.html
+++ b/mathopoly.html
@@ -28,9 +28,7 @@
   <body>
     <!-- slider_area_start -->
     <div class="slider_area">
-      <div
-        class="single_slider d-flex align-items-center breaking_barriers_bg overlay"
-      >
+      <div class="single_slider d-flex align-items-center mathopoly_bg overlay">
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-xl-12">
@@ -40,14 +38,14 @@
                   data-wow-duration="1s"
                   data-wow-delay=".4s"
                 >
-                  Breaking Barriers
+                  Mathopoly
                 </h3>
                 <p
                   class="wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".5s"
                 >
-                  Innovative Teaching Ideas - Grades 9 and 10
+                  Math and Auction
                 </p>
                 <a
                   href="#register"
@@ -76,7 +74,7 @@
                 data-wow-duration="1s"
                 data-wow-delay=".3s"
               >
-                Let’s build foundations, not barriers.
+                Plot. Plan. Pitch.
               </h4>
               <br />
               <iframe
@@ -96,9 +94,9 @@
     </div>
     <div class="map_area" id="register">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeU0yTn9TMMEWRIbS3Y0OcWPCqK7_p4-usJ42u0cTIT2bPkmg/viewform?embedded=true"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSfn0hOeWiTdTp0eoUS8iVX_HEb5SVG4m0nGAmNH7xp1_FmgZw/viewform?embedded=true"
         width="100%"
-        height="1769"
+        height="1364"
         frameborder="0"
         marginheight="0"
         marginwidth="0"
