--- a/forum-infinitum.html
+++ b/forum-infinitum.html
@@ -29,7 +29,7 @@
     <!-- slider_area_start -->
     <div class="slider_area">
       <div
-        class="single_slider d-flex align-items-center breaking_barriers_bg overlay"
+        class="single_slider d-flex align-items-center forum_infinitum_bg overlay"
       >
         <div class="container">
           <div class="row align-items-center justify-content-center">
@@ -40,14 +40,14 @@
                   data-wow-duration="1s"
                   data-wow-delay=".4s"
                 >
-                  Breaking Barriers
+                  Forum Infinitum
                 </h3>
                 <p
                   class="wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".5s"
                 >
-                  Innovative Teaching Ideas - Grades 9 and 10
+                  Solving Paradoxes
                 </p>
                 <a
                   href="#register"
@@ -76,7 +76,7 @@
                 data-wow-duration="1s"
                 data-wow-delay=".3s"
               >
-                Let’s build foundations, not barriers.
+                You are not a bundle of thoughts, you are infinity personified.
               </h4>
               <br />
               <iframe
@@ -96,7 +96,7 @@
     </div>
     <div class="map_area" id="register">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSeU0yTn9TMMEWRIbS3Y0OcWPCqK7_p4-usJ42u0cTIT2bPkmg/viewform?embedded=true"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSem2fc5b6rHRPJbuAoiOE5tjOZqbYs7IBCJA4f20Z0B9OCAOQ/viewform?embedded=true"
         width="100%"
         height="1769"
         frameborder="0"
