Add taglines for operation breakout and cognitoria

--- a/operation-breakout.html
+++ b/operation-breakout.html
@@ -70,6 +70,14 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="section_title mb-80">
+              <h4
+                align="center"
+                class="wow fadeInRight"
+                data-wow-duration="1s"
+                data-wow-delay=".3s"
+              >
+                Find Mister X.
+              </h4>
               <br />
               <iframe
                 width="100%"
