--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
     <!-- performar_area_start  -->
     <div class="performar_area black_bg">
       <div class="container">
+        <iframe
+          width="100%"
+          height="600"
+          src="https://www.youtube-nocookie.com/embed/y-ZpkKBLqlY"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+        <br /><br /><br />
         <div class="row">
           <div class="col-lg-12">
             <div class="section_title mb-80">
@@ -714,8 +724,8 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This website is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                National Public School Indiranagar | All rights reserved | This
+                website is made by
                 <a href="mailto:r.harikeshav@icloud.com" target="_blank"
                   >Harikeshav R</a
                 >
