--- a/mercatus.html
+++ b/mercatus.html
@@ -84,7 +84,7 @@
                 width="100%"
                 height="600"
                 style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/lzTbdrmQ3yE"
+                src="https://www.youtube-nocookie.com/embed/GzyO66VK_Ws"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
