--- a/nemesis.html
+++ b/nemesis.html
@@ -82,7 +82,7 @@
                 width="100%"
                 height="600"
                 style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/lzTbdrmQ3yE"
+                src="https://www.youtube-nocookie.com/embed/g7UJMXwvn1I"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
