--- a/rhythmatics.html
+++ b/rhythmatics.html
@@ -83,7 +83,7 @@
                 width="100%"
                 height="600"
                 style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/lzTbdrmQ3yE"
+                src="https://www.youtube-nocookie.com/embed/JmJUevUrG0s"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
