Change mercatus event description

--- a/mercatus.html
+++ b/mercatus.html
@@ -47,7 +47,7 @@
                   data-wow-duration="1s"
                   data-wow-delay=".5s"
                 >
-                  Math and Stocks - Grades 11 and 12
+                  Math and Commerce - Grades 11 and 12
                 </p>
                 <a
                   href="#register"
