--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                   </a>
                   <div class="performer_heading">
                     <h4 align="center">Mercatus</h4>
-                    <h5 align="center">Math and Stocks</h5>
+                    <h5 align="center">Math and Commerce</h5>
                   </div>
                 </div>
               </div>
