Update footer of all separate event pages

--- a/mercatus.html
+++ b/mercatus.html
@@ -28,9 +28,7 @@
   <body>
     <!-- slider_area_start -->
     <div class="slider_area">
-      <div
-        class="single_slider d-flex align-items-center mercatus_bg overlay"
-      >
+      <div class="single_slider d-flex align-items-center mercatus_bg overlay">
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-xl-12">
@@ -176,11 +174,17 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This website is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                National Public School Indiranagar | All rights reserved | This
+                website is made by
                 <a href="mailto:r.harikeshav@icloud.com" target="_blank"
                   >Harikeshav R</a
                 >
+
+                <!--   All rights reserved | This website is made with -->
+                <!--   <i class="fa fa-heart-o" aria-hidden="true"></i> by -->
+                <!--   <a href="mailto:r.harikeshav@icloud.com" target="_blank" -->
+                <!--     >Harikeshav R</a -->
+                <!--   > -->
               </p>
             </div>
           </div>
