--- a/nemesis.html
+++ b/nemesis.html
@@ -174,8 +174,13 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This website is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                <!-- All rights reserved | This website is made with -->
+                <!-- <i class="fa fa-heart-o" aria-hidden="true"></i> by -->
+                <!-- <a href="mailto:r.harikeshav@icloud.com" target="_blank" -->
+                <!--   >Harikeshav R</a -->
+                <!-- > -->
+                National Public School Indiranagar | All rights reserved | This
+                website is made by
                 <a href="mailto:r.harikeshav@icloud.com" target="_blank"
                   >Harikeshav R</a
                 >
