--- a/agon.html
+++ b/agon.html
@@ -174,8 +174,8 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This website is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                National Public School Indiranagar | All rights reserved | This
+                website is made by
                 <a href="mailto:r.harikeshav@icloud.com" target="_blank"
                   >Harikeshav R</a
                 >
