--- a/saturn.html
+++ b/saturn.html
@@ -102,6 +102,7 @@
         marginheight="0"
         marginwidth="0"
         >Loading…</iframe
+      >
     </div>
     <!-- map_area_end  -->
 
@@ -173,11 +174,17 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                All rights reserved | This website is made with
-                <i class="fa fa-heart-o" aria-hidden="true"></i> by
+                National Public School Indiranagar | All rights reserved | This
+                website is made by
                 <a href="mailto:r.harikeshav@icloud.com" target="_blank"
                   >Harikeshav R</a
                 >
+
+                <!-- All rights reserved | This website is made with -->
+                <!-- <i class="fa fa-heart-o" aria-hidden="true"></i> by -->
+                <!-- <a href="mailto:r.harikeshav@icloud.com" target="_blank" -->
+                <!--   >Harikeshav R</a -->
+                <!-- > -->
               </p>
             </div>
           </div>
