Remove registration links from event pages

--- a/auctus.html
+++ b/auctus.html
@@ -48,11 +48,11 @@
                   IPL Auction - Grades 11 and 12
                 </p>
                 <a
-                  href="#register"
+                  href="#trailer"
                   class="boxed-btn3 wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".7s"
-                  >Register</a
+                  >Trailer</a
                 >
               </div>
             </div>
@@ -77,31 +77,22 @@
                 Where the thrill of the game meets the thrill of business.
               </h4>
               <br />
-              <iframe
-                width="100%"
-                height="600"
-                style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/a3Qw0Du1Pn4"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="map_area" id="register">
+    <div class="map_area" id="trailer">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSfsygdiWUpu38VtLRcu6yPGR6pbwGI499_0fXGx0F6mGG3kkA/viewform?embedded=true"
         width="100%"
-        height="1364"
+        height="600"
+        style="border: 0"
+        src="https://www.youtube-nocookie.com/embed/a3Qw0Du1Pn4"
+        title="YouTube video player"
         frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <!-- map_area_end  -->
 
