--- a/mercatus.html
+++ b/mercatus.html
@@ -48,11 +48,11 @@
                   Math and Commerce - Grades 11 and 12
                 </p>
                 <a
-                  href="#register"
+                  href="#trailer"
                   class="boxed-btn3 wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".7s"
-                  >Register</a
+                  >Trailer</a
                 >
               </div>
             </div>
@@ -78,31 +78,22 @@
                 the Ultimate Talent Quest
               </h4>
               <br />
-              <iframe
-                width="100%"
-                height="600"
-                style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/GzyO66VK_Ws"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="map_area" id="register">
+    <div class="map_area" id="trailer">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSfKmFy4QoYzGnLAKGqBWhRIQwflsOwdUhIb8auqocNIlqge9g/viewform?embedded=true"
         width="100%"
-        height="1769"
+        height="600"
+        style="border: 0"
+        src="https://www.youtube-nocookie.com/embed/GzyO66VK_Ws"
+        title="YouTube video player"
         frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <!-- map_area_end  -->
 
