--- a/forum-infinitum.html
+++ b/forum-infinitum.html
@@ -50,11 +50,11 @@
                   Solving Paradoxes
                 </p>
                 <a
-                  href="#register"
+                  href="#trailer"
                   class="boxed-btn3 wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".7s"
-                  >Register</a
+                  >Trailer</a
                 >
               </div>
             </div>
@@ -79,31 +79,22 @@
                 You are not a bundle of thoughts, you are infinity personified.
               </h4>
               <br />
-              <iframe
-                width="100%"
-                height="600"
-                style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/MJnP5K6k4oQ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="map_area" id="register">
+    <div class="map_area" id="trailer">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSem2fc5b6rHRPJbuAoiOE5tjOZqbYs7IBCJA4f20Z0B9OCAOQ/viewform?embedded=true"
         width="100%"
-        height="1769"
+        height="600"
+        style="border: 0"
+        src="https://www.youtube-nocookie.com/embed/MJnP5K6k4oQ"
+        title="YouTube video player"
         frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <!-- map_area_end  -->
 
