--- a/hacksquads.html
+++ b/hacksquads.html
@@ -50,11 +50,11 @@
                   Logical Reasoning with Coding Skills
                 </p>
                 <a
-                  href="#register"
+                  href="#trailer"
                   class="boxed-btn3 wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".7s"
-                  >Register</a
+                  >Trailer</a
                 >
               </div>
             </div>
@@ -79,31 +79,22 @@
                 Decrypt the code. Prevent the Fallout. Save the world.
               </h4>
               <br />
-              <iframe
-                width="100%"
-                height="600"
-                style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/EcWiyB0dbSw"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="map_area" id="register">
+    <div class="map_area" id="trailer">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSe5iiuAXP35pTcvUvLRnmB7odoFZq2gHGD8p4o4ThaDL7uClQ/viewform?embedded=true"
         width="100%"
-        height="959"
+        height="600"
+        style="border: 0"
+        src="https://www.youtube-nocookie.com/embed/EcWiyB0dbSw"
+        title="YouTube video player"
         frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <!-- map_area_end  -->
 
