--- a/sum-it-up.html
+++ b/sum-it-up.html
@@ -48,11 +48,11 @@
                   Math Game Show - Grades 11 and 12
                 </p>
                 <a
-                  href="#register"
+                  href="#trailer"
                   class="boxed-btn3 wow fadeInLeft"
                   data-wow-duration="1s"
                   data-wow-delay=".7s"
-                  >Register</a
+                  >Trailer</a
                 >
               </div>
             </div>
@@ -79,31 +79,22 @@
                 the boldest game show hosts jealous!
               </h4>
               <br />
-              <iframe
-                width="100%"
-                height="600"
-                style="border: 0"
-                src="https://www.youtube-nocookie.com/embed/ZAQipxa4oUY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="map_area" id="register">
+    <div class="map_area" id="trailer">
       <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSfvZFaY3v2e2hcp_y5Wpnb6KQpwi0_ZWgjqv1WLynO1K6f2JQ/viewform?embedded=true"
         width="100%"
-        height="2174"
+        height="600"
+        style="border: 0"
+        src="https://www.youtube-nocookie.com/embed/ZAQipxa4oUY"
+        title="YouTube video player"
         frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      ></iframe>
     </div>
     <!-- map_area_end  -->
 
