Fix typo in mystifiezzeria event name

--- a/index.html
+++ b/index.html
@@ -544,13 +544,13 @@
                   data-wow-duration="1s"
                   data-wow-delay=".3s"
                 >
-                  <a href="mystifiezzera.html">
+                  <a href="mystifiezzeria.html">
                     <div data-tilt class="thumb">
-                      <img src="img/performer/mystifiezzera.png" alt="" />
+                      <img src="img/performer/mystifiezzeria.png" alt="" />
                     </div>
                   </a>
                   <div class="performer_heading">
-                    <h4 align="center">Mystifiezzera</h4>
+                    <h4 align="center">Mystifiezzeria</h4>
                     <h5 align="center">Math and Puzzles</h5>
                   </div>
                 </div>
