--- a/mystifiezzeria.html
+++ b/mystifiezzeria.html
@@ -29,7 +29,7 @@
     <!-- slider_area_start -->
     <div class="slider_area">
       <div
-        class="single_slider d-flex align-items-center mystifiezzera_bg overlay"
+        class="single_slider d-flex align-items-center mystifiezzeria_bg overlay"
       >
         <div class="container">
           <div class="row align-items-center justify-content-center">
@@ -40,7 +40,7 @@
                   data-wow-duration="1s"
                   data-wow-delay=".4s"
                 >
-                  Mystifiezzera
+                  Mystifiezzeria
                 </h3>
                 <p
                   class="wow fadeInLeft"
